# bitchef

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_dependencies.txt  note-to-self-on-third-party.txt
Notes/: For a RepoConfig base.txt  Need downloader Needs.txt  The default getter is.txt  There needs to be a dispatcher.txt  You know what JSON makes.txt  attribute type check.txt  bitchef-project.txt  class DependencyBuilder.txt  cli-notes.txt  daemon-mode-notes.txt  dependencies.txt  dependency_management_notes.txt  interprocess-communications.txt  json_schema_test_generator_notes.txt  notes_random.txt  pm_repos_notes.txt  project json schema needs.txt  project-json-contents.txt  separate_client_comm_lib.txt  task-module-details.txt  tasks-notes.txt
bitchef-utility-libraries/bitchef-communications/: CMakeLists.txt
bitchef-utility-libraries/bitchef-exceptions/: CMakeLists.txt
bitchef-utility-libraries/bitchef-exceptions/include/: development-exceptions.hpp
bitchef-utility-libraries/bitchef-exceptions/src/: development-exceptions.cc
bitchef/utilities/communications_source/include/: __communications.hpp  cpp_utilities.hpp  socket_communications.hpp
bitchef/utilities/communications_source/src/: communications.cc
